@@ -7,7 +7,7 @@ OVERVIEW
     3.09.4, 3.10, 3.10.0, 3.10.1, 3.10.2, 3.10.3, 3.11, 3.11.0, 3.11.1,
     3.11.2, 3.12.0, 3.12.1, 3.13.0.
 
-  This Camlp5 version is 5.15.
+  This Camlp5 version is 5.16.
 
   Camlp5 must be compiled either in "transitional mode" or in "strict mode".
   See the file MODE for information.
